<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <!--items for a single row of RecyclerView-->
        <TextView
            android:id="@+id/tvDiseaseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvConfidencePer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="7dp"
            android:text="@string/confiPercent"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="15sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tvCausativeAgent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/tvCausativeAgent"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvCause"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/tvCause"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/symptoms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tvSymptoms"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tvSymptoms1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptoms1"
            android:textColor="#000"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tvSymptoms2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptoms2"
            android:textColor="#000"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tvSymptoms3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptoms3"
            android:textColor="#000"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tvSymptoms4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptoms4"
            android:textColor="#000"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tvSymptoms5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptoms5"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/comments"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tvComments1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvComments1"
            android:textColor="#000"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tvComments2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvComments2"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/management"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/management"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tvManagement1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvManagement1"
            android:textColor="#000"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tvManagement2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvManagement2"
            android:textColor="#000"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tvManagement3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvManagement3"
            android:textColor="#000"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tvManagement4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvManagement4"
            android:textColor="#000"
            android:textSize="15sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>